--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
             <version>1.28</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.14.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
